fix wrapping issue

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -21,9 +21,6 @@ body {
     font-size: 1.2rem;
   }
 }
-strong {
-  font-weight: 500;
-}
 
 a {
   color: #0000ff;
@@ -35,7 +32,7 @@ a[href^=tel]{ color:#000; text-decoration:none;}
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0em;
   line-height: 1.3;
-  font-weight: 500;
+  font-weight: 400;
 }
 h2:not(:first-child) {
  margin-top: 40px;
